<resources>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="akb48">AKB48</string>
    <string name="app_name">AKB48 가이드</string>
    <string name="app_version">Version 1.0</string>

    <string name="error">Error</string>

    <string name="finish">종료</string>

    <string name="nmb48">NMB48</string>

    <string name="hkt48">HKT48</string>

    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="ngt48">NGT48</string>

    <string name="ok">확인</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ske48">SKE48</string>
    <string name="stu48">STU48</string>
    <string name="success">Success</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_member_list">MemberListActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="title_activity_screen">ScreenActivity</string>
</resources>
