<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_akb48"
            android:name="@string/akb48"
            android:title="@string/akb48" />
        <item
            android:id="@+id/nav_ske48"
            android:name="@string/ske48"
            android:title="@string/ske48" />
        <item
            android:id="@+id/nav_nmb48"
            android:name="@string/nmb48"
            android:title="@string/nmb48" />
        <item
            android:id="@+id/nav_hkt48"
            android:name="@string/hkt48"
            android:title="@string/hkt48" />
        <item
            android:id="@+id/nav_ngt48"
            android:name="@string/ngt48"
            android:title="@string/ngt48" />
        <item
            android:id="@+id/nav_stu48"
            android:name="@string/stu48"
            android:title="@string/stu48" />
    </group>

    <item
        android:name="Communicate"
        android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:name="Share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:name="Send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
